--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jinny's Website</title>
+<link href="Jinny.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
+<h1><a></a></h1>
 <img src="images/Graffiti-wide2400x400.jpg" class="center">
 
+<a href="index.html"><button>HOME</button></a>
 
 <h1> MMP 240 Class Website </h1>
 
