--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <a href="index.html"><button>HOME</button></a>
 
-<h1> MMP 240 Class Website </h1>
+<h1><a> href="http://www.bmcc.cuny.edu</a> MMP 240 Class Website </h1>
 
 <h2>Jinyi Huang</h2>
 
@@ -24,8 +24,7 @@
 
 <h3>Assigments</h3>
 <ul>
-<li>Exercise 1</li>
-<li>Exercise 2</li>
+<li><a href="exercise/exercise2.html"exercise2</a></li>
 <li>Exercise 3</li>
 <li>Exercise 4</li>
 <li>Exercise 5</li>
