--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 </head>
 
 <body>
-<h1><a></a></h1>
-<img src="images/Graffiti-wide2400x400.jpg" class="center">
+    <h1><a> href="http://www.bmcc.cuny.edu</a> MMP 240 Class Website </h1>
+<img src="images/Graffiti-wide2400x400.jpg" alt="me">
 
-<a href="index.html"><button>HOME</button></a>
-
-<h1><a> href="http://www.bmcc.cuny.edu</a> MMP 240 Class Website </h1>
 
 <h2>Jinyi Huang</h2>
 
@@ -24,7 +21,7 @@
 
 <h3>Assigments</h3>
 <ul>
-<li><a href="exercise/exercise2.html"exercise2</a></li>
+<li><a href="exercise/exercise2.html"exercise2 /a></li>
 <li>Exercise 3</li>
 <li>Exercise 4</li>
 <li>Exercise 5</li>
