--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h3>Assigments</h3>
 <ul>
-<li><a href="exercise/exercise2.html"exercise2 /a></li>
+<li><a href="exercise/exercise2.html"> Exercise2 </a></li>
 <li>Exercise 3</li>
 <li>Exercise 4</li>
 <li>Exercise 5</li>
