--- a/JinnyMMp240/index.html
+++ b/JinnyMMp240/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-   
+    <a href="index.html"><button>HOME</button></a>
+	<a href="taylorswift.html"><button>RECIPE</button></a> 
 
 <h1> MMP 240 Class Website </h1>
 
