--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -1,13 +1,33 @@
-<html>
-<head><title>My 1st Page</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jinny's Website</title>
+
+</head>
+
 <body>
-    <a href="other.html">Another Page</a>
     
-<h1>Huge Headline</h1>
-<h2>Smaller Headline</h2>
-<h6>Tiny Headline</h6>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
-</body>
+<h1> Cookies </h1>
+
+<p> This <em>cookies </em>recipe makes dozens of delicious cookies with crisp with <strong> chocolate </strong>chips!</p>
+
+<h2>Ingredeients</h2>
+
+<ul>
+
+<li>cup butter, softened</li>
+<li>cup white sugar</li>
+<li>cup packed brown sugar</li>
+<li>2 large egg</li>
+<li>2 teaspoons vanilla extract</li>
+<li>1 teaspoons baking soda</li>
+<li>2 teaspoon hot water</li>
+<li>1/2 teaspoon salt</li>
+<li>3 cup all-purpose flour</li>
+</ul>
+
+    </body>
 </html>
+
