--- a/JinnyMMp240/index.html
+++ b/JinnyMMp240/index.html
@@ -4,26 +4,25 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jinny's Website</title>
-
+<link rel="stylesheet"href=style.css>
 </head>
 
 <body>
-    <a> href="index.html"HOME </a>
-	<a> href="taylorswift.html"RECIPE </a> 
-
+    <a href="index.html"><button>HOME</button></a>
+	<a href="recipe.html"><button>RECIPE</button></a>
 <h1> MMP 240 Class Website </h1>
 
 <h2>Jinyi Huang</h2>
 
 <p>JINYI.HUANG45@STU.BMCC.CUNY.EDU</p>
 
-<p><img src="building450x450.jpg" alt="lefty">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<p><img src="building450x450.jpg" alt="Jinyi Huang </img>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
-<h3>Assigments</h3>
+<h3> Assigments </h3>
 <ul>
-<li><a href="recipe.html">Recipe</a></li>
+<li><a href=" recipe.html">Recipe</a></li>
 <li><a href="exercise2/exercise2.html"> exercise2 </a></li>
 <li>Exercise 3</li>
 <li>Exercise 4</li>
