--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -4,16 +4,33 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jinny's Website</title>
-
+<link rel="stylesheet"href=style.css>
 </head>
 
 <body>
-    
+    <a href="index.html"><button>HOME</button></a>
+	<a href="recipe.html"><button>RECIPE</button></a>
+	    
 <h1> Cookies </h1>
 
 <p> This <em>cookies </em>recipe makes dozens of delicious cookies with crisp with <strong> chocolate </strong>chips!</p>
 
 <h2>Ingredeients</h2>
+
+<ul>
+
+<li>cup butter, softened</li>
+<li>cup white sugar</li>
+<li>cup packed brown sugar</li>
+<li>2 large egg</li>
+<li>2 teaspoons vanilla extract</li>
+<li>1 teaspoons baking soda</li>
+<li>2 teaspoon hot water</li>
+<li>1/2 teaspoon salt</li>
+<li>3 cup all-purpose flour</li>
+</ul>
+
+<h2>Derection</h2>
 
 <ul>
 
