--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -5,11 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jinny's Website</title>
 <link rel="stylesheet"href=style.css>
+
+</style>
 </head>
 
 <body>
-    <a href="index.html"><button>HOME</button></a>
-	<a href="recipe.html"><button>RECIPE</button></a>
+    
 	    
 <h1> Cookies </h1>
 
@@ -19,31 +20,29 @@
 
 <ul>
 
-<li>cup butter, softened</li>
-<li>cup white sugar</li>
-<li>cup packed brown sugar</li>
+<li>1 cup salted butter softened</li>
+<li>1 cup granulated sugar</li>
+<li>1 cup light brown sugar packed</li>
 <li>2 large egg</li>
 <li>2 teaspoons vanilla extract</li>
 <li>1 teaspoons baking soda</li>
 <li>2 teaspoon hot water</li>
 <li>1/2 teaspoon salt</li>
 <li>3 cup all-purpose flour</li>
+<li>2 cups chocolate chips (14 oz)</li>
 </ul>
 
-<h2>Derection</h2>
+<h2> Instructions </h2>
 
-<ul>
-
-<li>cup butter, softened</li>
-<li>cup white sugar</li>
-<li>cup packed brown sugar</li>
-<li>2 large egg</li>
-<li>2 teaspoons vanilla extract</li>
-<li>1 teaspoons baking soda</li>
-<li>2 teaspoon hot water</li>
-<li>1/2 teaspoon salt</li>
-<li>3 cup all-purpose flour</li>
-</ul>
+<p>1. Preheat oven to 375 degrees F. Line three baking sheets with parchment paper and set aside.</p>
+<p>2. In a medium bowl mix flour, baking soda, baking powder and salt. Set aside.</p>
+<p>3. Cream together butter and sugars until combined.</p>
+<p>4. Beat in eggs and vanilla until light (about 1 minute).</p>
+<p>5. Mix in the dry ingredients until combined.</p>
+<p>6. Add chocolate chips and mix well.</p>
+<p>7. Roll 2-3 Tablespoons (depending on how large you like your cookies) of dough at a time into balls and place them evenly spaced on your prepared cookie sheets.</p>
+<p>8. Bake in preheated oven for approximately 8-10 minutes. Take them out when they are just barely starting to turn brown.</p>
+<p>9. Let them sit on the baking pan for 5 minutes before removing to cooling rack.</p>
 
     </body>
 </html>
