--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jinny's Website</title>
 <link rel="stylesheet"href=style.css>
+
+</style>
 </head>
 
 <body>
     <a href="index.html"><button>HOME</button></a>
 	<a href="recipe.html"><button>RECIPE</button></a>
+   
+       
 <h1> MMP 240 Class Website </h1>
 
 <h2>Jinyi Huang</h2>
