--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    
-	    
-<h1> Cookies </h1>
+    <img src="cookies-2-2400x400.jpg" class="center">    
+   
+<h1> Chocolate Chips Cookies </h1>
 
 <p> This <em>cookies </em>recipe makes dozens of delicious cookies with crisp with <strong> chocolate </strong>chips!</p>
 
