--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jinny's Website</title>
-<link rel="stylesheet"href=style.css>
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Strawberry Cake Recipe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <img src="cookies-2-2400x400.jpg" class="center">    
-   
-<h1> Chocolate Chips Cookies </h1>
+    <header>
+        <h1>Delicious Strawberry Cake Recipe</h1>
+        <p>Fresh, fruity, and perfect for any occasion!</p>
+    </header>
 
-<p> This <em>cookies </em>recipe makes dozens of delicious cookies with crisp with <strong> chocolate </strong>chips!</p>
+    <section>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups all-purpose flour</li>
+            <li>1 1/2 teaspoons baking powder</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1/2 cup unsalted butter, softened</li>
+            <li>1 1/2 cups sugar</li>
+            <li>2 large eggs</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>1/2 cup whole milk</li>
+            <li>1 1/2 cups fresh strawberries, chopped</li>
+            <li>Optional: Whipped cream for serving</li>
+        </ul>
+    </section>
 
-<h2>Ingredeients</h2>
+    <section>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Preheat the oven to 350°F (175°C). Grease and flour two 8-inch round cake pans.</li>
+            <li>In a medium bowl, whisk together the flour, baking powder, and salt.</li>
+            <li>In a large bowl, cream the butter and sugar until light and fluffy. Beat in the eggs one at a time, then stir in the vanilla extract.</li>
+            <li>Gradually add the flour mixture to the wet ingredients, alternating with the milk, beginning and ending with the flour mixture. Mix until just combined.</li>
+            <li>Gently fold in the chopped strawberries.</li>
+            <li>Divide the batter evenly between the two prepared pans. Bake for 25-30 minutes, or until a toothpick inserted into the center comes out clean.</li>
+            <li>Let the cakes cool in the pans for 10 minutes, then remove from the pans and transfer to a wire rack to cool completely.</li>
+            <li>Serve with whipped cream or frost as desired.</li>
+        </ol>
+    </section>
 
-<ul>
-
-<li>1 cup salted butter softened</li>
-<li>1 cup granulated sugar</li>
-<li>1 cup light brown sugar packed</li>
-<li>2 large egg</li>
-<li>2 teaspoons vanilla extract</li>
-<li>1 teaspoons baking soda</li>
-<li>2 teaspoon hot water</li>
-<li>1/2 teaspoon salt</li>
-<li>3 cup all-purpose flour</li>
-<li>2 cups chocolate chips (14 oz)</li>
-</ul>
-
-<h2> Instructions </h2>
-
-<p>1. Preheat oven to 375 degrees F. Line three baking sheets with parchment paper and set aside.</p>
-<p>2. In a medium bowl mix flour, baking soda, baking powder and salt. Set aside.</p>
-<p>3. Cream together butter and sugars until combined.</p>
-<p>4. Beat in eggs and vanilla until light (about 1 minute).</p>
-<p>5. Mix in the dry ingredients until combined.</p>
-<p>6. Add chocolate chips and mix well.</p>
-<p>7. Roll 2-3 Tablespoons (depending on how large you like your cookies) of dough at a time into balls and place them evenly spaced on your prepared cookie sheets.</p>
-<p>8. Bake in preheated oven for approximately 8-10 minutes. Take them out when they are just barely starting to turn brown.</p>
-<p>9. Let them sit on the baking pan for 5 minutes before removing to cooling rack.</p>
-
-    </body>
+    <footer>
+        <p>&copy; 2024 Strawberry Sweets. All rights reserved.</p>
+    </footer>
+</body>
 </html>
-
