--- a/JinnyMMp240/recipe.html
+++ b/JinnyMMp240/recipe.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strawberry Cake Recipe</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jinny's Website</title>
+<link rel="stylesheet"href=style.css>
+
+</style>
 </head>
+
 <body>
-    <header>
-        <h1>Delicious Strawberry Cake Recipe</h1>
-        <p>Fresh, fruity, and perfect for any occasion!</p>
-    </header>
+      
+   
+<h1> Delicious Strawberry Cake Recipe </h1>
 
-    <section>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 cups all-purpose flour</li>
-            <li>1 1/2 teaspoons baking powder</li>
-            <li>1/4 teaspoon salt</li>
-            <li>1/2 cup unsalted butter, softened</li>
-            <li>1 1/2 cups sugar</li>
-            <li>2 large eggs</li>
-            <li>2 teaspoons vanilla extract</li>
-            <li>1/2 cup whole milk</li>
-            <li>1 1/2 cups fresh strawberries, chopped</li>
-            <li>Optional: Whipped cream for serving</li>
-        </ul>
-    </section>
+<p> Fresh, <em>fruity, </em>and <strong>perfect</strong> for any  occasion!</p>
 
-    <section>
-        <h2>Instructions</h2>
+<h2>Ingredients</h2>
+<div class="container"></div>
+    <img src="IMG_0628.jpg" class="lefty">
+<ul>
+    <li>2 cups all-purpose flour</li>
+    <li>1 1/2 teaspoons baking powder</li>
+    <li>1/4 teaspoon salt</li>
+    <li>1/2 cup unsalted butter, softened</li>
+    <li>1 1/2 cups sugar</li>
+    <li>2 large eggs</li>
+    <li>2 teaspoons vanilla extract</li>
+    <li>1/2 cup whole milk</li>
+    <li>1 1/2 cups fresh strawberries, chopped</li>
+    <li>Optional: Whipped cream for serving</li>
+</ul>
+</div>
+
+<h2>Instructions</h2>
         <ol>
             <li>Preheat the oven to 350°F (175°C). Grease and flour two 8-inch round cake pans.</li>
             <li>In a medium bowl, whisk together the flour, baking powder, and salt.</li>
@@ -40,10 +44,6 @@
             <li>Let the cakes cool in the pans for 10 minutes, then remove from the pans and transfer to a wire rack to cool completely.</li>
             <li>Serve with whipped cream or frost as desired.</li>
         </ol>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Strawberry Sweets. All rights reserved.</p>
-    </footer>
-</body>
+    </body>
 </html>
+
