--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <a href="index.html"><button>HOME</button></a>
-	<a href="Recipe/recipe.html"><button>RECIPE</button></a>
+	<a href="recipe/recipe.html"><button>RECIPE</button></a>
    
        
 <h1> MMP 240 Class Website </h1>
