--- a/exercise4/exercise4.html
+++ b/exercise4/exercise4.html
@@ -6,6 +6,13 @@
 
     <style>
     /* Type CSS code here */
+    .content {
+      background:  url('ww-cast.jpg') no-repeat center center, 
+          linear-gradient(to right, rgba(255, 255, 0, 0.5), rgba(0, 0, 255, 0.5)); 
+        background-size: cover, cover; 
+        padding:200px; 
+        height: 700px; 
+      }
 
     </style>
 
