--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -5,14 +5,34 @@
     <title>Exercise 5</title>
 
     <style>
-
-    #wrapper{
-      max-width:1170px;
-      margin:0 auto;
+  
+    #wrapper {
+      max-width: 1170px;
+      margin: 0 auto;
       font-family: sans-serif;
     }
-      
- /* Add CSS code here */
+    a {
+      color:green; 
+      text-decoration: none; 
+    }
+
+     a:hover {
+      text-decoration: underline; 
+    }
+
+    nav a {
+      color: blue; 
+      text-decoration: none; 
+    }
+
+    nav a:hover {
+      text-decoration: underline; 
+    }
+
+    input:focus {
+      border: solid 2px black; 
+      background-color: lightblue; 
+    }
 
     </style>
 
@@ -37,7 +57,7 @@
         <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
         <button>Submit</button>
           </form>
-      </div> <!-- .content -->
-    </div> <!-- #wrapper -->
+      </div> 
+    </div> 
   </body>
 </html>
