--- a/exercise6/exercise6.html
+++ b/exercise6/exercise6.html
@@ -5,8 +5,33 @@
     <title>Exercise 6</title>
 
     <style>
-    /* Type CSS code here */
+    /* CSS code for the layout */
+    .content {
+      width: 100%;
+      overflow: hidden; 
+    }
 
+    .col-left {
+      float: left;
+      width: 45%;
+      background-color: #ddd;
+      padding: 10px;
+      margin-right: 4%; 
+    }
+
+    .col-right {
+      float: right;
+      width: 45%;
+      background-color: #bbb;
+      padding: 10px;
+    }
+
+    footer {
+      clear: both;
+      background-color: lightblue;
+      text-align: center;
+      padding: 10px;
+    }
     </style>
 
   </head>
