--- a/midterm/episodes.html
+++ b/midterm/episodes.html
@@ -14,13 +14,14 @@
     <div class="logo">
         <img src="images/logo.png"page-logo alt="logo" >
     </div>
-    <div class="nav-buttons">
+    <nav class="nav-buttons">
     <a href="index.html"><button>ABOUT</button></a>
     <a href="episodes.html"><button>CHARACTER</button></a>
-    </div>
-    </div>
-    </div>
+    </nav>
 </header>
+<div class="poster2">
+    <img src="images/1.jpg" alt="Head">
+</div>
 
  <section class="bg2">
     <div class="page2">
@@ -77,11 +78,32 @@
     </div>
     </div>
     </div>
+
+    <div class="page2">
+        <div class="imgleft"> <img src="images/6.webp" /> </div>
+        <div class="character-2">
+        <h3><strong>Plankton</strong></h3>
+         <p class="p2"><strong>Voice Actor:</strong>  Mr. Lawrence</p>
+        <p class="p2">Plankton is a tiny single-celled organism who constantly attempts to steal the Krabby Patty secret formula. He is smart and cunning, but his plans often fail. Despite this, he remains a determined antagonist.</p>
+        <div class="info-box">
+        </div>
+        </div>
+        </div>
+
+        <div class="page2">
+            <div class="imgleft"> <img src="images/7.png" /> </div>
+            <div class="character-2">
+            <h3><strong>Gary the Snail</strong></h3>
+             <p class="p2"><strong>Voice Actor:</strong> Tom Kenny</p>
+            <p class="p2">Gary is SpongeBob's pet snail, known for his intelligence and gentle nature. He makes sounds similar to a cat and can express emotions with his tentacles. Gary plays a significant role in SpongeBob's life.</p>
+            </div>
+            </div>
+            </div>
 </section>
    
 </body>
 <footer>
 <p>Thank you</p>
-<p>@ Spoonge Bob @</p>
+<p>&copy Spoonge Bob </p>
 </footer>
 </html>
