--- a/quizzes/quiz1.html
+++ b/quizzes/quiz1.html
@@ -6,7 +6,18 @@
 
     <style>
     /* Type CSS code here */
-
+    h1 {
+        color: red;
+    }
+    header h1 {
+        color: red;
+    }
+    .main-title {
+        color: red;
+    }
+    #site-title {
+        color: red;
+    }
     </style>
 
   </head>
