--- a/exercise4/exercise4.html
+++ b/exercise4/exercise4.html
@@ -10,9 +10,13 @@
       background:  url('ww-cast.jpg') no-repeat center center, 
           linear-gradient(to right, rgba(255, 255, 0, 0.5), rgba(0, 0, 255, 0.5)); 
         background-size: cover, cover; 
-        padding:200px; 
-        height: 700px; 
+        padding:100px; 
+        height: 500px; 
+        width: 1000px;
+        margin-left: 60px;
+        margin-top: 20px;
       }
+    
 
     </style>
 
