--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -5,34 +5,37 @@
     <title>Exercise 5</title>
 
     <style>
-  
-    #wrapper {
-      max-width: 1170px;
-      margin: 0 auto;
-      font-family: sans-serif;
-    }
-    a {
-      color:green; 
-      text-decoration: none; 
-    }
+      #wrapper {
+        max-width: 1170px;
+        margin: 0 auto;
+        font-family: sans-serif;
+      }
+      a {
+        color: green; 
+        text-decoration: none; 
+      }
 
-     a:hover {
-      text-decoration: underline; 
-    }
+      a:hover {
+        color:blueviolet;
+        text-decoration: underline; 
+      }
 
-    nav a {
-      color: blue; 
-      text-decoration: none; 
-    }
+    
+      nav a {
+        color: black; 
+        text-decoration: none; 
+      }
 
-    nav a:hover {
-      text-decoration: underline; 
-    }
+     
+      nav a:hover {
+        color: black;
+        text-decoration: underline; 
+      }
 
-    input:focus {
-      border: solid 2px black; 
-      background-color: lightblue; 
-    }
+      input:focus {
+        border: solid 2px black; 
+        background-color: lightblue;
+      }
 
     </style>
 
@@ -51,12 +54,14 @@
       </nav>
       <div class="content">
         <h1>Borough of Manhattan Community College</h1>
-        <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
+        <p>
+          <a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.
+        </p>
         <h3>Request More Information</h3>
         <form action="#" method="get">
-        <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
-        <button>Submit</button>
-          </form>
+          <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
+          <button type="submit">Submit</button>
+        </form>
       </div> 
     </div> 
   </body>
