--- a/midterm/index.html
+++ b/midterm/index.html
@@ -82,8 +82,8 @@
     <img src="images/js8.jpg">
 </section>
 
-<div class="video">
-<video src="images/video.mp4" controls="controls" width="100%" height="400px"></video>
+<div class="video" controls loop>
+<video src="images/360p.mp4" controls="controls" width="100%" height="400px"></video>
 </div>   
 
 </body>
