--- a/midterm/index.html
+++ b/midterm/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class="header">
     <div class="logo">
-        <img src="images/logo.png"page logo alt="logo" >
+        <img src="images/logo.png" logo alt="logo" >
     </div>
     <nav class="nav-buttons">
     <a href="index.html"><button>ABOUT</button></a>
-    <a href="episodes.html"><button>CHARACTER</button></a>
+    <a href="episodes.html"><button>EPISODES</button></a>
     
     </nav>
     
