--- a/midterm/episodes.html
+++ b/midterm/episodes.html
@@ -20,7 +20,9 @@
     </nav>
 </header>
 <div class="poster2">
-    <img src="images/1.jpg" alt="Head">
+    <div class="video" controls loop>
+        <video src="images/360p.mp4" controls="controls" width="100%" height="400px"></video>
+        </div>   
 </div>
 
  <section class="bg2">
