--- a/exercise7/exercise7.html
+++ b/exercise7/exercise7.html
@@ -10,19 +10,27 @@
     #wrapper{
       max-width:1200px;
       margin:0 auto;
+      background-color: lightblue;
+    }
+    
+    .flex-container{
+      display: flex;
+
     }
 
-    .flex-item{
-      width:200px;
-      border:solid 1px gray;
-      padding:5px;
-      border-radius: 10px;
-      margin:0.5em;
-    }
+    .flex-item {
+  width: 200px;
+  border: solid 1px gray;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 0.5em;
+  flex: 1 0 0; 
+}
 
-    .lead{
-      border:none;
-    }
+.lead {
+  border: none;
+  flex: 2 0 0; 
+}
 
     .img-responsive{
       width:100%;
@@ -46,17 +54,17 @@
         </div>
 
         <div class="flex-item card1">
-          <img src="https://via.placeholder.com/300x200" alt="placeholder" class="img-responsive">
+          <img src="https://placehold.co/300x200" alt="placeholder" class="img-responsive">
           <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
         <div class="flex-item card2">
-          <img src="https://via.placeholder.com/300x200" alt="placeholder" class="img-responsive">
+          <img src="https://placehold.co/300x200" alt="placeholder" class="img-responsive">
           <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
         <div class="flex-item card3">
-          <img src="https://via.placeholder.com/300x200" alt="placeholder" class="img-responsive">
+          <img src="https://placehold.co/300x200" alt="placeholder" class="img-responsive">
           <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
