--- a/exercise8/exercise8.html
+++ b/exercise8/exercise8.html
@@ -42,8 +42,20 @@
       text-decoration: underline;
     }
 
+ @media (max-width: 768px) {
+  nav{
+    padding:0;
+ }
 
-
+ nav li {
+          display: block; 
+          border-right: none;
+          border-bottom: solid 1px #fff; 
+          padding: 1em; 
+        }
+      
+      }
+      
     </style>
 
   </head>
