--- a/quizzes/quiz2.html
+++ b/quizzes/quiz2.html
@@ -24,9 +24,9 @@
             height: 200px;
             background-color: deeppink;
             margin: 16px;
-            text-align: center;
+            text-align:center;
             display: flex;
-            align-items: center;
+            align-items: top;
             justify-content: center;
         }
 
