--- a/quizzes/quiz3.html
+++ b/quizzes/quiz3.html
@@ -21,10 +21,35 @@
             grid-row-gap:16px;
         }
 
-        .one{
+        .one {
             background-color: aqua;
             grid-column-start: 1;
-            grid-column-end: 4;
+            grid-column-end: 2;   
+            grid-row-start: 1;    
+            grid-row-end: 3;       
+        }
+
+        .two {
+            background-color: coral;
+            grid-column-start: 2; 
+            grid-column-end: 3;    
+            grid-row-start: 1;     
+            grid-row-end: 2;       
+        }
+        .three {
+            background-color: coral;
+            grid-column-start: 2;  
+            grid-column-end: 3;    
+            grid-row-start: 2;     
+            grid-row-end: 3;       
+        }
+
+        .four {
+            background-color: coral;
+            grid-column-start: 3;  
+            grid-column-end: 4;    
+            grid-row-start: 1;     
+            grid-row-end: 2;      
         }
 
         .two, .three, .four{
