--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -152,7 +152,10 @@ flex: 2 0 0;
   }
 
   </style>
-
+<div class="box">
+<div class="box-header header-natural">
+<h2>Digital Design</h2>
+</div>
 <body>
     <div id="wrapper">
   
