--- a/final/index.html
+++ b/final/index.html
@@ -123,12 +123,12 @@ data-toggle="dropdown">Disciplin <i class="fa fa-arrow-circle-o-down"></i></a>
 <!-- Wrapper for slides -->
 <div class="carousel-inner">
 <div class="item active">
-<img src="https://placehold.co/1400x500" alt=""class=banner>
+<img src="images/banner.jpg" alt=""class=banner>
 							
 <!-- Static Header -->
 <div class="header-text hidden-xs">
 <div class="col-md-12 text-center">
-<h2>Top College in CUNY </h2>
+<h2>Welcome to CUNY </h2>
 </div>
 </div>
 
@@ -155,8 +155,8 @@ data-toggle="dropdown">Disciplin <i class="fa fa-arrow-circle-o-down"></i></a>
 <div class="box-content">
 <div class="row">
 <div class="col-md-6">
-<img src="https://placehold.co/400x250" alt="">
-<h3><a href="#">CUNY</a></h3>
+<img src="images/queens1.jpg" alt="">
+<h3><a href="#">Top ranked College</a></h3>
 <span class="rating">
 	<i class="fa fa-star"></i>
 	<i class="fa fa-star"></i>
@@ -165,11 +165,11 @@ data-toggle="dropdown">Disciplin <i class="fa fa-arrow-circle-o-down"></i></a>
 	<i class="fa fa-star-half"></i>
 </span>
    
-   <p>Marshall, Will, and Holly on a routine expedition, met the greatest earthquake ever known. High on the rapids, it struck their tiny raft! And plunged them down a thousand feet below…...</p>
+   <p>Queens College is ranked in top 25 in the graphic design</p>
 </div>
 								
 <div class="col-md-6">
-<img src="https://placehold.co/400x250" alt="">
+<img src="images/home2.jpg" alt="">
 <h3><a href="#">CUNY</a></h3>
 <span class="rating">
      <i class="fa fa-star"></i>
