--- a/final/queens.html
+++ b/final/queens.html
@@ -39,11 +39,11 @@
     </a>
 
 <!-- Navigation Links -->
-<div class="hamburger-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+<div id="hamburger-menu" class="hamburger-menu">
+<span></span>
+<span></span>
+<span></span>
+</div>
 <ul class="nav toplist">
 <li><a href="index.html">Home</a></li>
 
@@ -62,7 +62,7 @@
 <a href="#">Degree</a>
 <ul class="dropdown-menu">
 <li><a href="associate.html">Associate</a></li>
-<li><a href="bachelor.html">Bachelor</a></li>
+<li><a href="bachelor.html">Associate</a></li>
 </ul>
 </li>
 
@@ -84,9 +84,8 @@
 </li>
 </ul>
 </nav>
-
 </header>	
-</head>
+
 <style>
   /* Type CSS code here */
 
@@ -102,90 +101,63 @@
   }
 
   .flex-item {
-width: 150px;
-border: solid 1px gray;
-padding: 5px;
-border-radius: 10px;
-margin: 1em;
-flex: 1 0 0; 
-}
-
-.lead {
-border: none;
-flex: 2 0 0; 
-}
+    width: 150px;
+    border: solid 1px gray;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 1em;
+    flex: 1 0 0; 
+  }
 
   .img-responsive{
     width:100%;
   }
 
-  .lead p{
-    font-size: larger;
-  }
+</style>
 
-  </style>
 <div class="box">
-<div class="box-header header-natural">
-<h2>Digital Design</h2>
-</div>
-<body>
+  <div class="box-header header-natural">
+    <h2>Design Programs in Queens</h2>
+  </div>
+  
   <div id="wrapper">
     <div class="flex-container">
-  
-      <!-- LaGuardia Community College -->
-      <div class="flex-item">
-        <img src="https://placehold.co/300x200" alt="LaGuardia College Program" class="img-responsive">
-        <h3>LaGuardia Community College</h3>
-        <p><strong>Program:</strong> New Media Technology (A.A.S.)</p>
-        <p>The New Media Technology major offers students the opportunity to work and experiment with some of the exciting technologies available today...</p>
+
+      <div class="flex-item card1">
+        <img src="images/queenscollege.webp" alt="Queens College" class="img-responsive">
+        <p><strong>Queens College</strong><br>
+          Program: Design<br>
+          Degree: B.F.A.<br>
+          Discipline: Digital Design, Animation<br>
+          Location: Queens<br>
+          Description: Queens College’s Design program combines knowledgeable faculty with industry standard software and the creativity of a studio-based learning environment. Students choose one of three concentrations: Communication Design, Animation & Illustration, or Interaction Design.</p>
       </div>
-  
-      <!-- Queensborough Community College -->
-      <div class="flex-item">
-        <img src="https://placehold.co/300x200" alt="Queensborough Program" class="img-responsive">
-        <h3>Queensborough Community College</h3>
-        <p><strong>Program:</strong> Digital Art and Design (A.S.)</p>
-        <p>The A.S. degree program in Digital Art and Design prepares students to enter the greatly expanding field of new media...</p>
+
+      <div class="flex-item card2">
+        <img src="images/york.jpg" alt="York College" class="img-responsive">
+        <p><strong>York College</strong><br>
+          Program: Communications Technology<br>
+          Degree: B.S.<br>
+          Discipline: Digital Design<br>
+          Location: Queens<br>
+          Description: An interdisciplinary program that brings together television, web, information systems, computer science, and design. The program offers three main concentrations: digital video, computer graphics, and systems and applications.</p>
       </div>
-  
-      <!-- Queens College -->
-      <div class="flex-item">
-        <img src="https://placehold.co/300x200" alt="Queens College Design Program" class="img-responsive">
-        <h3>Queens College</h3>
-        <p><strong>Program:</strong> Design (B.F.A.)</p>
-        <p>Queens College’s Design program combines knowledgeable faculty with industry standard software...</p>
-      </div>
-  
-      <!-- York College -->
-      <div class="flex-item">
-        <img src="https://placehold.co/300x200" alt="York College Communications" class="img-responsive">
-        <h3>York College</h3>
-        <p><strong>Program:</strong> Communications Technology (B.S.)</p>
-        <p>An interdisciplinary program that brings together television, web, information systems...</p>
-      </div>
-  
+
     </div> <!-- closing .flex-container -->
   </div> <!-- closing #wrapper -->
-  
-  </body>
-  
+
+</body>
 
 <footer>					
   <div class="copy">
   <div class="logo two">
     <a href="index.html"><h3>Final@Design</h3></a>
-    </div>
+  </div>
   
-  <ul class="icon">
-    <li><a href=""> <i class="fb1"> </i> </a></li>
-    <li><a href=""><i class="tw1"> </i> </a></li>
-    <li><a href=""><i class="linked1"> </i> </a></li>
-    <li><a href=""><i class="google1"> </i> </a></li>
-  </ul>
   
   <p>Copyright &copy; 2024.CUNY.</p>
   </div>
-  </footer>
-  </body>
-  </html>
-  
+</footer>
+
+</body>
+</html>
