--- a/final/bronx.html
+++ b/final/bronx.html
@@ -39,11 +39,11 @@
     </a>
 
 <!-- Navigation Links -->
-<div class="hamburger-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+<div id="hamburger-menu" class="hamburger-menu">
+<span></span>
+<span></span>
+<span></span>
+</div>
 <ul class="nav toplist">
 <li><a href="index.html">Home</a></li>
 
@@ -62,7 +62,7 @@
 <a href="#">Degree</a>
 <ul class="dropdown-menu">
 <li><a href="associate.html">Associate</a></li>
-<li><a href="bachelor.html">Bachelor</a></li>
+<li><a href="bachelor.html">Associate</a></li>
 </ul>
 </li>
 
@@ -86,7 +86,7 @@
 </nav>
 
 </header>	
-</head>
+
 <style>
   /* Type CSS code here */
 
@@ -102,49 +102,30 @@
   }
 
   .flex-item {
-width: 150px;
-border: solid 1px gray;
-padding: 5px;
-border-radius: 10px;
-margin: 1em;
-flex: 1 0 0; 
-}
-
-.lead {
-border: none;
-flex: 2 0 0; 
-}
+    width: 150px;
+    border: solid 1px gray;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 1em;
+    flex: 1 0 0; 
+  }
 
   .img-responsive{
     width:100%;
   }
 
-  .lead p{
-    font-size: larger;
-  }
+</style>
 
-  </style>
 <div class="box">
-<div class="box-header header-natural">
-<h2>Digital Design</h2>
-</div>
-<body>
+  <div class="box-header header-natural">
+    <h2>Design Programs in the Bronx</h2>
+  </div>
+  
   <div id="wrapper">
-
     <div class="flex-container">
 
       <div class="flex-item card1">
-        <img src="images/bmcc.jpg"alt="placeholder" class="img-responsive">
-        <p><strong>Borough of Manhattan Community College</strong><br>
-          Program: Multimedia Programming and Design<br>
-          Degree: A.S.<br>
-          Discipline: Digital Design<br>
-          Location: Manhattan<br>
-          Description: The Multimedia Programming and Design Program prepares students for careers in a variety of multimedia industries, companies, and institutions that develop, produce, or market multimedia products, programs, or services.</p>
-      </div>
-
-      <div class="flex-item card2">
-        <img src="images/bronx.webp"alt="placeholder" class="img-responsive">
+        <img src="images/bronx_community_college.jpg" alt="Bronx Community College" class="img-responsive">
         <p><strong>Bronx Community College</strong><br>
           Program: Digital Design<br>
           Degree: A.A.S.<br>
@@ -153,8 +134,8 @@ flex: 2 0 0;
           Description: This program prepares students for careers in the visual communication industry in positions such as graphic design, web design, computer animation, 3D graphic visualization, motion graphics design, and interactive multimedia design.</p>
       </div>
 
-      <div class="flex-item card3">
-        <img src="https://placehold.co/300x200" alt="Digital Design Program" class="img-responsive">
+      <div class="flex-item card2">
+        <img src="images/hostos.jpg" alt="Hostos Community College" class="img-responsive">
         <p><strong>Hostos Community College</strong><br>
           Program: Digital Design & Animation<br>
           Degree: A.S.<br>
@@ -165,24 +146,19 @@ flex: 2 0 0;
 
     </div> <!-- closing .flex-container -->
   </div> <!-- closing #wrapper -->
+
 </body>
 
 <footer>					
   <div class="copy">
   <div class="logo two">
     <a href="index.html"><h3>Final@Design</h3></a>
-    </div>
+  </div>
   
-  <ul class="icon">
-    <li><a href=""> <i class="fb1"> </i> </a></li>
-    <li><a href=""><i class="tw1"> </i> </a></li>
-    <li><a href=""><i class="linked1"> </i> </a></li>
-    <li><a href=""><i class="google1"> </i> </a></li>
-  </ul>
   
   <p>Copyright &copy; 2024.CUNY.</p>
   </div>
-  </footer>
-  </body>
-  </html>
-  
+</footer>
+
+</body>
+</html>
