--- a/final/manhattan.html
+++ b/final/manhattan.html
@@ -39,11 +39,11 @@
     </a>
 
 <!-- Navigation Links -->
-<div class="hamburger-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+<div id="hamburger-menu" class="hamburger-menu">
+<span></span>
+<span></span>
+<span></span>
+</div>
 <ul class="nav toplist">
 <li><a href="index.html">Home</a></li>
 
@@ -62,7 +62,7 @@
 <a href="#">Degree</a>
 <ul class="dropdown-menu">
 <li><a href="associate.html">Associate</a></li>
-<li><a href="bachelor.html">Bachelor</a></li>
+<li><a href="bachelor.html">Associate</a></li>
 </ul>
 </li>
 
@@ -84,9 +84,8 @@
 </li>
 </ul>
 </nav>
-
 </header>	
-</head>
+
 <style>
   /* Type CSS code here */
 
@@ -98,92 +97,86 @@
   
   .flex-container{
     display: flex;
-
   }
 
   .flex-item {
-width: 150px;
-border: solid 1px gray;
-padding: 5px;
-border-radius: 10px;
-margin: 1em;
-flex: 1 0 0; 
-}
-
-.lead {
-border: none;
-flex: 2 0 0; 
-}
+    width: 150px;
+    border: solid 1px gray;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 1em;
+    flex: 1 0 0; 
+  }
 
   .img-responsive{
     width:100%;
   }
 
-  .lead p{
-    font-size: larger;
-  }
+</style>
 
-  </style>
 <div class="box">
-<div class="box-header header-natural">
-<h2>Digital Design</h2>
-</div>
-<body>
-    <div id="wrapper">
+  <div class="box-header header-natural">
+    <h2>Manhattan Design Programs</h2>
+  </div>
   
-      <div class="flex-container">
-  
-        <div class="flex-item card1">
-            <img src="images/bmcc.jpg"alt="placeholder" class="img-responsive">
-          <p><strong>Borough of Manhattan Community College</strong><br>
-            Program: Multimedia Programming and Design<br>
-            Degree: A.S.<br>
-            Discipline: Digital Design<br>
-            Location: Manhattan<br>
-            Description: The Multimedia Programming and Design Program prepares students for careers in a variety of multimedia industries, companies and institutions that develop, produce or market multimedia products, programs or services.</p>
-        </div>
-  
-        <div class="flex-item card2">
-          <img src="https://placehold.co/300x200" alt="Electronic Design and Multimedia" class="img-responsive">
-          <p><strong>The City College of New York</strong><br>
-            Program: Electronic Design and Multimedia<br>
-            Degree: B.F.A.<br>
-            Discipline: Digital Design<br>
-            Location: Manhattan<br>
-            Description: The Electronic Design & Multimedia program prepares students for careers in design in traditional print and emerging electronic media. It offers one of the most comprehensive, affordable 4-year programs in electronic art at a New York City public university, and has an 18-year record of alumni success.</p>
-        </div>
-  
-        <div class="flex-item card3">
-          <img src="https://placehold.co/300x200" alt="Graphic Communication" class="img-responsive">
-          <p><strong>Baruch College</strong><br>
-            Program: Graphic Communication<br>
-            Degree: B.A.<br>
-            Discipline: Digital Design<br>
-            Location: Manhattan<br>
-            Description: The graphic communication specialization provides training in graphics as well as basic training in the broader aspects of business communication. It prepares the graphic artist to enter a business environment.</p>
-        </div>
-  
-      </div> <!-- closing .flex-container -->
-    </div> <!-- closing #wrapper -->
-  </body>
-  
+  <div id="wrapper">
+    <div class="flex-container">
+
+      <div class="flex-item card1">
+        <img src="images/CityCollege.jpg" alt="City College of New York" class="img-responsive">
+        <p><strong>The City College of New York</strong><br>
+          Program: Electronic Design and Multimedia<br>
+          Degree: B.F.A.<br>
+          Discipline: Digital Design, Multimedia<br>
+          Location: Manhattan<br>
+          Description: This program offers a combination of traditional print and emerging digital media, focusing on web design, video production, and 3D modeling to prepare students for a variety of careers in the creative industries.</p>
+      </div>
+
+      <div class="flex-item card2">
+        <img src="images/parsons.jpg" alt="Parsons School of Design" class="img-responsive">
+        <p><strong>Parsons School of Design</strong><br>
+          Program: Design and Technology<br>
+          Degree: B.F.A.<br>
+          Discipline: Digital Design, Technology<br>
+          Location: Manhattan<br>
+          Description: The Design and Technology program at Parsons focuses on integrating design with technology to develop interactive projects, including digital art, games, websites, and apps. It emphasizes innovation and creativity in new media.</p>
+      </div>
+
+      <div class="flex-item card3">
+        <img src="images/sva.jpg" alt="School of Visual Arts" class="img-responsive">
+        <p><strong>School of Visual Arts (SVA)</strong><br>
+          Program: BFA in Design<br>
+          Degree: B.F.A.<br>
+          Discipline: Graphic Design, Digital Design<br>
+          Location: Manhattan<br>
+          Description: SVA’s BFA in Design offers a comprehensive approach to graphic design, covering print, interactive, and digital media. Students work with industry leaders to develop skills for careers in design and multimedia production.</p>
+      </div>
+
+      <div class="flex-item card4">
+        <img src="images/nyu.jpg" alt="New York University" class="img-responsive">
+        <p><strong>New York University (NYU)</strong><br>
+          Program: Interactive Telecommunications Program (ITP)<br>
+          Degree: M.A.<br>
+          Discipline: Digital Media, Technology<br>
+          Location: Manhattan<br>
+          Description: ITP at NYU combines art, technology, and business to help students develop digital solutions and interactive projects. It covers areas such as augmented reality, artificial intelligence, and web development.</p>
+      </div>
+
+    </div> <!-- closing .flex-container -->
+  </div> <!-- closing #wrapper -->
+
+</body>
 
 <footer>					
   <div class="copy">
   <div class="logo two">
     <a href="index.html"><h3>Final@Design</h3></a>
-    </div>
+  </div>
   
-  <ul class="icon">
-    <li><a href=""> <i class="fb1"> </i> </a></li>
-    <li><a href=""><i class="tw1"> </i> </a></li>
-    <li><a href=""><i class="linked1"> </i> </a></li>
-    <li><a href=""><i class="google1"> </i> </a></li>
-  </ul>
   
   <p>Copyright &copy; 2024.CUNY.</p>
   </div>
-  </footer>
-  </body>
-  </html>
-  
+</footer>
+
+</body>
+</html>
