--- a/final/brooklyn.html
+++ b/final/brooklyn.html
@@ -75,7 +75,7 @@
         <div class="flex-item">
             <img src="images/kingsborough.jpg" alt="Kingsborough Community College" class="img-responsive">
             <p><strong>Kingsborough Community College</strong><br>
-                A.S. Animation (Brooklyn) - The Animation concentration is part of the Graphic Design and Illustration major. Students learn traditional, hand-drawn animation in a digital environment, as well as storyboarding and 3D animation.</p>
+               The Animation concentration is part of the Graphic Design and Illustration major. Students learn traditional, hand-drawn animation in a digital environment, as well as storyboarding and 3D animation.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Animation</button>
         </div>
@@ -84,7 +84,7 @@
         <div class="flex-item">
             <img src="images/kingsborough.jpg" alt="Kingsborough Community College" class="img-responsive">
             <p><strong>Kingsborough Community College</strong><br>
-                A.S. Digital Design (Brooklyn) - The Art Department at Kingsborough Community College is dedicated to providing a comprehensive program of study in the visual arts, designed to prepare students of diverse life experience for either continued baccalaureate study or immediate entry into a range of visual art professions.</p>
+                The Art Department at Kingsborough Community College is dedicated to providing a comprehensive program of study in the visual arts, designed to prepare students of diverse life experience for either continued baccalaureate study or immediate entry into a range of visual art professions.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -93,7 +93,7 @@
         <div class="flex-item">
             <img src="images/nycct.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                A.A.S. Industrial Design (Brooklyn) - The Industrial Design Technology (IND) program is designed to provide students with a wide variety of skills enabling them to utilize 2D, 3D, and animation/simulation software packages in several diverse fields.</p>
+                The Industrial Design Technology (IND) program is designed to provide students with a wide variety of skills enabling them to utilize 2D, 3D, and animation/simulation software packages in several diverse fields.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Industrial Design</button>
         </div>
@@ -102,7 +102,7 @@
         <div class="flex-item">
             <img src="images/nycct.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                A.A.S. Digital Design (Brooklyn) - The AAS degree program in Communication Design provides students with a solid foundation in the theory and practices of the Communication Design profession and a grounding in general education. Students explore visual expression through a range of courses in drawing, design, and web design.</p>
+              The AAS degree program in Communication Design provides students with a solid foundation in the theory and practices of the Communication Design profession and a grounding in general education. Students explore visual expression through a range of courses in drawing, design, and web design.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -111,7 +111,7 @@
         <div class="flex-item">
             <img src="images/nycct.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                B.F.A. Digital Design (Brooklyn) - The BFA degree develops students' abilities to frame, research, and solve increasingly complex visual communication problems. Students develop a professional portfolio that prepares them for employment as art directors, graphic designers, illustrators, and web designers.</p>
+              The BFA degree develops students' abilities to frame, research, and solve increasingly complex visual communication problems. Students develop a professional portfolio that prepares them for employment as art directors, graphic designers, illustrators, and web designers.</p>
             <button class="degree-btn">B.F.A.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
